@@ -1,2 +1,8 @@
 # SMO_2 
 Система массового обслуживания на Java Fx
+
+### Запуск в IntelIJ Idea. JDK 11+
+
+- Скачайте `javafx` и распакуйте архив.
+- В `ProjectStructure` добавьте в `Libraries` папку `javafx/lib`. Нажмите `Apply`.
+- Добавьте в VM Options следующие аргументы:`--module-path ~YOUR_PATH~/javafx/lib/ --add-modules javafx.controls,javafx.fxml`
